# web-agent

./: .cronjobs.json  .env.example  .gitattributes  .gitignore  .todos.json  AGENTS.md  CAPABILITIES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ar.md  CONTRIBUTING.de.md  CONTRIBUTING.es.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Caddyfile  DESIGN.md  LICENSE  README.ar.md  README.de.md  README.es.md  README.md  README.zh-CN.md  SECURITY.ar.md  SECURITY.es.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  index.html  package-lock.json  package.json  playwright.config.ts  railpack.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.cursor/: hooks.json
.github/: FUNDING.yml  pull_request_template.md
.webagent/: providers.json
docs/: ARCHITECTURE.de.md  ARCHITECTURE.es.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  GLOSSARY.md  MIGRATION-loop-guard-history-cleanup.md  README.de.md  README.es.md  README.md  README.zh-CN.md  TRANSLATING.md  agent-notes.md  test-prompts.md  testing-checklist.md  turn-judge.md  use-cases-playbook.md
knowledge-vault/: README.md
public/: sw-register.js  sw.js
scripts/: apply-doc-locale-headers.mjs  build-embed-runtime.mjs  check-models.mjs  cors-proxy-server.mjs  daily-intelligent-poster.js  download-kokoro.mjs  download-loop-guard-model.mjs  download-whisper-model.mjs  edge-tts-handler.mjs  edge-tts-synth.mjs  edge-tts-voices.mjs  eval-turn-judge.py  generate-x-post-queue.js  ingest-turn-judge-data.py  post-to-x.js  run-daily-x-post.js  run-tool-smoke.mjs  start-with-proxy.sh  test-serialize-golden.py  train-turn-judge.py
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs
tests/: agent-auto-continue.test.ts  agent-memory.test.ts  artifact-preview.test.ts  at-reference.test.ts  audio-decode.test.ts  audio-tools.test.ts  bundled-skills-coverage.test.ts  capability-loader.test.ts  channel-dispatcher.test.ts  channel-outbound.test.ts  chunk-load-error.test.ts  context-compression.test.ts  e2e-helpers.ts  error-classifier.test.ts  multi-edit.test.ts  (+55 more)
(+345 files in other folders)
