[package]
name = "web-agent-tauri"
version = "0.0.4"
description = "Web Agent desktop shell"
authors = ["Web Agent contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "web_agent_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6" }
serde_json = "1"

[dependencies]
tauri = { version = "2.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "set-header", "trace"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls", "stream"] }
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
